--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <textarea id="ingresotexto" class="ingreso" placeholder="ingrese su texto aqui" type="text"></textarea>
 
             <div class="botones">
-                <span class="textoboton">Ingrese sin acentos por favor</span>
+                <span class="textoboton">Ingrese solo en palabrs minusculas y sin acentos por favor</span>
                 <div class="botoness">
                     <button type="button" id="encriptar()" onclick="encriptar()">ENCRIPTAR</button>
                     <button type="button" id="desecriptar()" onclick="desencriptar()">DESENCRIPTAR</button>
